# ROB502_programming

./: README.md
hw4/: CMakeLists.txt  test.cpp
hw4/fk/: CMakeLists.txt  fk.cpp
hw4/network/: CMakeLists.txt  network.cpp  viz_outputs.py
hw4/ransac/: CMakeLists.txt  ransac.cpp  ransac.h
hw4/results/: test
hw4/results/fk/: forward_kinematic
hw4/results/network/: network
hw4/results/ransac/: ransac
